--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -59,3 +59,16 @@ jobs:
             BUILD_REVISION=${{ github.sha }}
             BUILD_VERSION=${{ github.sha }}
           push: false
+
+      # Upload an artifact to GitHub
+      - name: Upload Artifact to Github Build Job
+        uses: actions/upload-artifact@v2
+        with:
+          name: my-artifact
+          path: path/to/artifact/world.txt
+
+      # Download an artifact from GitHub
+      - name: Download Artifact from Github Build Job
+        uses: actions/download-artifact@v2
+        with:
+          name: my-artifact
